# thrift

./: CMakeLists.txt
lib/cpp/src/thrift/transport/: THttpClient.cpp
zipkin/: zipkinCore.thrift
zipkin/cpp/: CMakeLists.txt  ZipkinCppTutorial.cpp
